# demo-tryton

./: .pre-commit-config.yaml  README.md  erp.py  hello.py  main.py  pyproject.toml  quart_tryton.py  trytond.conf
templates/: _base.html  home.html
templates/includes/: navbar.html
